# fastmail-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
fastmail_mcp/: __init__.py  config.py  dependencies.py  http_errors.py  server.py
fastmail_mcp/client/: __init__.py  client.py  models.py
fastmail_mcp/tools/: __init__.py  _helpers.py  mail.py  masked.py  mutations.py  sieve.py  submission.py  vacation.py
