[project]
name = "fastmail-mcp"
version = "0.1.0"
description = "A Fastmail MCP server built with FastMCP (JMAP over HTTP)"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
fastmail-mcp = "fastmail_mcp.server:main"
fastmail-mcp-http = "fastmail_mcp.server:main_http"

[tool.hatch.build.targets.wheel]
packages = ["fastmail_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "ruff>=0.15.7",
]
